--- a/main.html
+++ b/main.html
@@ -18,11 +18,11 @@
 		<tbody>
 			<tr>
 				<td>01 </td>
-				<td>Aman </td>
+				<td>Akhil </td>
 			</tr>
 			<tr>
 				<td>02 </td>
-				<td> Avika </td>
+				<td> Akash </td>
 			</tr>
 		<tbody>
 	</table>
